<resources>
    <string name="app_name">ClientManager</string>
    <string name="name">Nome</string>
    <string name="mobile">Aparelho</string>
    <string name="contact">Contato</string>
    <string name="date">Data</string>
    <string name="edit_issue_desc">Descrição do Problema</string>
    <string name="card">Cartão</string>
    <string name="cash">Dinheiro</string>
    <string name="total_value">Valor total</string>
    <string name="paid_value">Valor pago</string>
    <string name="done">Resolvido</string>
    <string name="next">Próximo</string>
    <string name="value">R$</string>
    <string name="pix">PIX</string>
    <string name="finish">Finalizar</string>
    <string name="payment_form">forma de pagamento</string>
    <string name="conclude">concluir</string>
    <string name="cancel">cancelar</string>
    <string name="save">Salvar</string>
    <string name="delete">Excluir</string>
    <string name="delete_message">Deseja excluir este cliente?</string>
    <string name="clients">CLIENTES</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="invalid_login">Usuário ou Senha incorretos!</string>
</resources>